# arcgis-js-parquet-weather

./: .gitignore  LICENSE  NOTICE  README.md  github-pages-parquet-head-worker.js  index.html
.github/workflows/: pages.yml
css/: style.css
data/: meteoswiss_points_all-points_48h.arcgis-timeinfo.json  meteoswiss_surface-hex-128x72_all-points_48h.arcgis-timeinfo.json  meteoswiss_surface-square-128x72_all-points_48h.arcgis-timeinfo.json  swiss-boundary-ch.geojson  swiss-boundary-ch.source.json
docs/: data-generation-workflow.md
js/: app.js  forecast-extras.js  github-pages-parquet-head.js  loading-page.js
python/: pyproject.toml
python/scripts/: meteoswiss_forecast_source.py  meteoswiss_to_geoparquet.py  refresh_sample_data.py
